Docker/jenkins/Jenkins2/k8sjenkins-agent-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: k8sjenkins-agent-policy
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 50000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: k8s-jenkins-master-deployment
      app.kubernetes.io/instance: k8sjenkins
  policyTypes:
  - Ingress
  - Egress
